<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/c34"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fontFamily="@font/louis_george_cafe_bold"
        android:text="@string/module"
        android:textColor="#FFFFFF"
        android:textSize="75sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/c218"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:fontFamily="@font/louis_george_cafe_bold"
        android:gravity="center"
        android:text="@string/c218"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/c235"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:fontFamily="@font/louis_george_cafe_bold"
        android:gravity="center"
        android:text="@string/c235"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/c346"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:fontFamily="@font/louis_george_cafe_bold"
        android:gravity="center"
        android:text="@string/c346"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/c206"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:fontFamily="@font/louis_george_cafe_bold"
        android:gravity="center"
        android:text="@string/c206"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/c203"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:fontFamily="@font/louis_george_cafe_bold"
        android:gravity="center"
        android:text="@string/c203"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

</LinearLayout>